[package]
name = "anchor-eventline-macros"
version = "0.1.0"
edition = "2021"
description = "Derive macros for anchor-eventline."
license = "Apache-2.0"
repository = "https://github.com/fabriziopfannl/anchor-eventline"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
