[package]
name = "anchor-eventline"
version = "0.1.0"
edition = "2021"
description = "Standardized Anchor event schemas for reliable off-chain indexing."
license = "Apache-2.0"
repository = "https://github.com/fabriziopfannl/anchor-eventline"
readme = "../../README.md"

[dependencies]
anchor-eventline-macros = { path = "../anchor-eventline-macros", version = "0.1.0" }
thiserror = "1.0"
sha2 = "0.10"

[features]
default = []
anchor = []
